Add new page code

--- a/templates/access_plan/index.html.twig
+++ b/templates/access_plan/index.html.twig
@@ -13,17 +13,19 @@
         </div>
         <div class="row mt-5 mb-3">
             <div class="col">
-                <div class="access-plan-title">Plan d'accès</div>
+                <div class="access-plan-title">Venir sur le lieu</div>
             </div>
         </div>
         <div class="row">
             <div class="col-6">
                 <div class="mb-3 access-plan-drive">arriver au centre en voiture</div>
-                <div class="access-plan-text">Le Centre, Base Sous-Marine Impasse Brown de Colstoun, 33000 Bordeaux Pour les automobilistes, un parking permet de profiter gratuitement d'une possibilité de stationnement. A10 puis rocade A630/E5/E606. Prendre la sortie 4 « Zone Industrielle Blanquefort, Bordeaux-Nord ». Prendre le Boulevard Aliénor d'Aquitaine, prendre à gauche Place de Latule puis immédiatement à droite, Boulevard Alfred Daney. Continuer 30 mètres sur Boulevard Alfred Daney, la Base sous-marine se trouve sur votre droite. Le parking est gratuit.</div>
+                <div class="access-plan-text">Le Centre, Base Sous-Marine Impasse Brown de Colstoun, 33000 Bordeaux <br><br> Pour les automobilistes, un parking permet de profiter gratuitement d'une possibilité de stationnement.
+                    <br><br>A10 puis rocade A630/E5/E606. Prendre la sortie 4 « Zone Industrielle Blanquefort, Bordeaux-Nord ». Prendre le Boulevard Aliénor d'Aquitaine, prendre à gauche Place de Latule puis immédiatement à droite, Boulevard Alfred Daney. Continuer 30 mètres sur Boulevard Alfred Daney, la Base sous-marine se trouve sur votre droite. Le parking est gratuit.</div>
             </div>
             <div class="col-6">
                 <div class="mb-3 access-plan-drive">par les transports en commun</div>
-                <div class="access-plan-text">Tram B : arrêt La Cité du vin Tram C : arrêt Ravezies V3 : station Lucien Faure Bus : arrêt Latule liane 9 et 32</div>
+                <div class="access-plan-text">Tram B : arrêt La Cité du vin <br> Tram C : arrêt Ravezies <br> V3 : station Lucien Faure
+                    <br> Bus : arrêt Latule liane 9 et 32</div>
                 <div class="my-3 access-plan-drive">les Services</div>
                 <div class="access-plan-text">Accès pour les personnes en situation de handicap (PMR)</div>
             </div>
