--- a/templates/practical_info/index.html.twig
+++ b/templates/practical_info/index.html.twig
@@ -32,14 +32,14 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 mt-4 ml-3 pl-5 practical-info-prices">
-                            Gratuité sous conditions *<br><br> Plein tarif : 5€<br><br> Tarif réduit : 3€ **<br><br> Groupe d'au moins 10 personnes :<br><br> 3€ par personne
-                            <br> Etudiant : 3€ <br><br> Etudiant en filières art * (école publique) : gratuit <br><br> Mineurs (moins de 18 ans): gratuit
+                        <div class="col-8 mt-4 ml-3 pl-5 practical-info-prices">
+                            <div class="mb-2">Gratuité sous conditions *</div><div class="mb-2">Plein tarif : 5€</div><div class="mb-2"> Tarif réduit : 3€ **</div> <div class="mb-2">Groupe d'au moins 10 personnes :</div><div class="mb-2"> 3€ par personne
+                            </div><div class="mb-2"> Etudiant : 3€ </div><div class="mb-2"> Etudiant en filières art * (ecole publique) : gratuit </div> Mineurs (moins de 18 ans): gratuit
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-4 mb-5 pb-5">
                 <div class="col-6 practical-info-legals">
                     ** Gratuit le 1er dimanche du mois (hors juillet et août) Moins de 18 ans Titulaires de la Carte jeunes et accompagnateur majeur Étudiants des filières artistiques des universités et écoles d'art publiques : architecture, histoire de l'art, archéologie, arts plastiques, arts graphiques, design et création industrielle, métiers d'art, photographie, mode et stylisme, patrimoine et paysage Personne handicapée et accompagnateur Bénéficiaires de minimas sociaux (RSA, ASS, ATS, ASPA, ATA) Détenteurs du Pass Musée Bordaux Détenteurs du Pass Pro Détenteurs d'un Bordeaux Métropole City Pass Personnels de la Ville de Bordeaux et de Bordeaux Métropole Personnel de l'école des Beaux-Arts Détenteurs de la carte Grand donateur Journalistes et guides conférenciers Détenteurs de la carte ICOM et de la Icomos Porteurs de la carte Opération Sentinelle
                 </div>
@@ -47,6 +47,25 @@
                     * Groupes d'adultes d'au moins 10 personnes Étudiants autres que ceux bénéficiant de la gratuité Demandeurs d'emploi Titulaires de la carte famille nombreuse Détenteurs d'un abonnement annuel à la Cité du vin Association des amis du musée des Arts décoratifs et du Design Association des amis du musée d'Aquitaine Société des amis des musées de Bordeaux Amis du musée des Beaux-Arts Association des amis du CAPC et abonnés du CAPC Association Amuseum
                 </div>
             </div>
+                <div class="social pt-2 background-transparent">
+                    <div class="container pt-4">
+                        <div class="row">
+                            <div class="col text-center mb-3">
+                                <div class="section-title">NOUS SUIVRE</div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-auto text-center">
+                                <div class="social-image" style="background-image: url(/images/footer-icon-facebook.png)"></div>
+                            </div>
+                            <div class="col-auto text-center">
+                                <div class="social-image" style="background-image: url(/images/footer-icon-instagram.png)"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
+{% endblock %}
+{% block social %}
 {% endblock %}
