--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,6 @@ header {
     color: white;
     z-index: 1;
     top: 0;
-    padding: 2rem 40px;
 }
 
 .header__item {
@@ -95,6 +94,7 @@ header * {
     color: black;
     background-color: white;
     padding: 51px 40px;
+    display: block;
 }
 .header-ticket-link:hover {
     color: black;
@@ -236,6 +236,15 @@ a {
     font-weight: 900;
     font-style: normal;
 }
+.show-expo-title {
+    font-weight: 900;
+    text-align: left;
+    font-size: 42px;
+    line-height: 1.2;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+}
 .instagram-first-photo-description {
     font-style: italic;
     font-size: 14px;
@@ -271,9 +280,27 @@ a {
     color: #1D1D1B;
     opacity: 1;
     text-transform: uppercase;
+    font-family: 'Metropolis' !important;
     font-weight: 900;
     font-size: 18px;
     margin-top: 10px;
+}
+.well-played {
+    font-size: 25px;
+    font-weight: 300;
+}
+.left-places {
+    font-style: italic;
+    font-size: 25px;
+}
+.code-input {
+    width: 80%;
+    margin-left: 10%;
+    font-size: 29px;
+    background-color: #1D1D1B;
+    height: 37px;
+    padding: 28px 37px;
+    border: 1px solid #707070;
 }
 .instagram-text-block-subtitle {
     color: #fff;
@@ -400,6 +427,7 @@ a:hover {
 }
 .exposition-description {
     background-color: white;
+    font-weight: 700;
     color: black;
     padding: 6px 25px;
     margin-left: -28px;
@@ -410,7 +438,7 @@ a:hover {
 .practical-info-text-block {
     background-color: white;
     color: black;
-    padding: 30px 20px;
+    padding: 30px;
 }
 .practical-info {
     background-color: #262626;
@@ -428,7 +456,7 @@ a:hover {
 }
 .practical-info-hours {
     font-family: 'Courier', arial, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
 }
 .practical-info-prices {
     font-family: 'Courier', arial, sans-serif;
@@ -436,7 +464,7 @@ a:hover {
 }
 .practical-info-legals {
     font-style: italic;
-    font-size: 12px;
+    font-size: 14px;
     font-family: 'Metropolis Extra', sans-serif;
     font-weight: 200;
 
@@ -446,7 +474,10 @@ a:hover {
     color: white;
 }
 .access-plan-plan {
-    height: 602px;
+    height: 835px;
+}
+.font-weight-900 {
+    font-weight: 900;
 }
 .access-plan-title {
     font-size: 42px;
@@ -535,6 +566,9 @@ input:focus {
 }
 .back-transparent {
     background-color: #1D1D1B;
+}
+.background-transparent {
+    background-color: transparent;
 }
 .cursor {
     width: var(--size);
