--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,6 +83,25 @@
             <div class="content">
                 {% block body %}{%  endblock %}
             </div>
+            {% block social %}
+                <div class="social pt-2 {% if app.request.get('_route') != 'home' %}back-transparent{% endif %}">
+                    <div class="container pt-4 pb-5">
+                        <div class="row">
+                            <div class="col text-center mb-3">
+                                <div class="section-title">NOUS SUIVRE</div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-auto text-center">
+                                <div class="social-image" style="background-image: url(/images/footer-icon-facebook.png)"></div>
+                            </div>
+                            <div class="col-auto text-center">
+                                <div class="social-image" style="background-image: url(/images/footer-icon-instagram.png)"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endblock %}
             {% block footer %}
                 {{ include('footer.html.twig') }}
             {% endblock %}
