--- a/templates/code/index.html.twig
+++ b/templates/code/index.html.twig
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <input class="code-input" type="text" placeholder="XXXX-XXXX-XXX-XXX">
+                    <input class="code-input" type="text" placeholder="XXXX-XXXX-XXX-XXX"><div class="check"></div>
                 </div>
             </div>
             <div class="row mt-2">
@@ -26,8 +26,9 @@
                     <div>Il ne reste plus que 8 places à gagner</div>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-5 result-wrapper">
                 <div class="col text-center">
+                    <div class="wrong-code">Code erroné, essaye encore.. </div>
                     <div class="well-played"><span class="font-weight-900">Bien joué ;)</span><br> <div class="underline">Obtenez vos places gratuites</div></div>
                 </div>
             </div>
