--- a/templates/exposition/index.html.twig
+++ b/templates/exposition/index.html.twig
@@ -11,7 +11,7 @@
         <div class="container pt-5">
             <div class="row mt-5">
                 <div class="col-7 p-2 mt-5">
-                    <div class="exposition-main-image" style="background-size:cover; background-image: url(/uploads/images/{{ exposition.tinyImage }})"></div>
+                    <div class="exposition-main-image" style="background-size:cover;background-image: url(/images/expobienvenue-photo1.png)"></div>
                 </div>
                 <div class="col-5 p-2 mt-5">
                     <div class="exposition-secondary-image" style="background-size:cover; background-image: url(/images/expobienvenue-photo2.png)"></div>
