--- a/public/css/style.css
+++ b/public/css/style.css
@@ -621,7 +621,7 @@ a:hover {
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: black;
     position: absolute;
     top: 0;
     z-index: 100;
