--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,12 +109,13 @@
             <div class="cursor cursor--large"></div>
             <div class="cursor cursor--small"></div>
         </div>
-        <div class="loader-wrapper">
+        <div class="loader-wrapper" id="loader-wrapper">
             <div class="loader"></div>
         </div>
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
             <script type="text/javascript" src="{{ asset('js/jquery.ripples-min.js') }}"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.10/lottie.min.js"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/script.js') }}"></script>
         {% endblock %}
