--- a/templates/planning/event.html.twig
+++ b/templates/planning/event.html.twig
@@ -3,7 +3,7 @@
         <a href="{{ path('exposition', {id: exposition.id}) }}" class="col-4 offset-1 d-flex flex-column planning-over text-right move">
             <div class="planning-expo-title">{{ exposition.title }}</div>
             <div class="planning-expo-description">{{ exposition.shortDescription }}</div>
-            <div class="planning-expo-text">{{ exposition.longDescription }}</div>
+            <div class="planning-expo-text">{{ exposition.longDescription|length > 300 ?  exposition.longDescription|slice(0, 300) ~ '...' :  exposition.longDescription  }}</div>
         </a>
         <a href="{{ path('exposition', {id: exposition.id}) }}" class="planning-first-photo-wrapper">
             <div class="planning-first-photo" style="background-image: url(/uploads/images/{{ exposition.tinyImage }})">
@@ -45,7 +45,7 @@
         <a href="{{ path('exposition', {id: exposition.id}) }}" class="col-4 p-0 planning-over offset-2 text-left move">
             <div class="planning-expo-title">{{ exposition.title }}</div>
             <div class="planning-expo-description">{{ exposition.shortDescription }}</div>
-            <div class="planning-expo-text">{{ exposition.longDescription }}</div>
+            <div class="planning-expo-text">{{ exposition.longDescription|length > 300 ?  exposition.longDescription|slice(0, 300) ~ '...' :  exposition.longDescription  }}</div>
         </a>
     </div>
 {% endif %}
