Fix instagram issue

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -110,7 +110,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="offset-2 col-2 p-2 pr-3">
-                    <div class="instagram-fourth-photo ml-auto water" style="background-image: url(/uploads/images/{{ instagramGallery.secondImage }})"></div>
+                    <div class="instagram-fourth-photo ml-auto water" style="background-image: url(/images/insta1.png)"></div>
                 </div>
                 <div class="col-auto pr-0 pl-0">
                     <div class="ml-auto square-action pointer-square current-event--main-square black-big-dot"></div>
@@ -120,6 +120,7 @@
                         <div class="instagram-text-block-subtitle">#<span class="font-weight-900">between</span>theexperience sur instagram</div>
                     </div>
                 </div>
+                <div class="col-3 pr-0 py-2 pl-0">
                     <div class="row m-0 d-flex flex-column align-items-end">
                         <div class="col-6 mb-3 p-0"><div class="instagram-second-photo water" style="background-image: url(/uploads/images/{{ instagramGallery.secondImage }})"></div></div>
                         <div class="col p-0"><div class="instagram-third-photo water" style="background-image: url(/uploads/images/{{ instagramGallery.thirdImage }})"></div></div>
