--- a/templates/ticket_confirmation/index.html.twig
+++ b/templates/ticket_confirmation/index.html.twig
@@ -16,10 +16,10 @@
             <div class="row">
                 <div class="col-10 ticket-form">
                     <div class="col-7 offset-2">
-                        <div class="col-7 pt-5 p-0">
+                        <div class="col-9 pt-5 p-0">
                             <div class="mb-2 ticket-reserve">VOTRE RÉSERVATION</div>
-                            <div class="ticket-resume row m-0">
-                                <div class="col-6 offset-1 mb-3 font-weight-bold">
+                            <div class="ticket-resume row m-0 pb-5">
+                                <div class="col-6 mb-3 font-weight-bold">
                                     Billet d’entrée
                                 </div>
                                 <div class="col-3 font-weight-bold">
@@ -28,7 +28,7 @@
                                 <div class="col-2 font-weight-bold">
                                     Prix
                                 </div>
-                                <div class="col-6 offset-1 font-weight-light">
+                                <div class="col-6 font-weight-light">
                                     Rhizomes/Africa2020
                                 </div>
                                 <div class="col-3 font-weight-light">
@@ -37,7 +37,7 @@
                                 <div class="col-2 font-weight-light">
                                     3 €
                                 </div>
-                                <div class="col-6 offset-1 font-weight-light">
+                                <div class="col-6 font-weight-light">
                                     Rhizomes/Africa2020
                                 </div>
                                 <div class="col-3 font-weight-light">
@@ -49,27 +49,46 @@
                             </div>
                             <div class="row justify-content-end pt-3 pb-3 pl-3 pr-5">
                                 <div class="col p-0">
-                                    <div class="row">
+                                    <div class="row mb-2">
                                         <div class="col-3 text-right ml-auto font-weight-light">Total</div>
                                         <div class="col-3 text-right font-weight-light">8 €</div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row mb-2">
                                         <div class="col-3 text-right ml-auto font-weight-light">TVA</div>
                                         <div class="col-3 text-right font-weight-light">0.80 €</div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row  mb-2">
                                         <div class="col-3 text-right ml-auto font-weight-bold">Total TTC</div>
                                         <div class="col-3 text-right font-weight-light">8.80 €</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-6 ml-auto pl-0 pr-3 d-flex"><button class="primary-button w-100 ticket-button">Payer en ligne</button></div>
+                                <div class="col-6 ml-auto pl-0 pr-3 d-flex"><button class="primary-button w-100 ticket-button">Imprimer le billet</button></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="social pt-2 background-transparent">
+            <div class="container pt-4">
+                <div class="row">
+                    <div class="col text-center mt-5">
+                        <div class="section-subtitle">NOUS SUIVRE</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto text-center">
+                        <div class="social-image" style="background-image: url(/images/footer-icon-facebook.png)"></div>
+                    </div>
+                    <div class="col-auto text-center">
+                        <div class="social-image" style="background-image: url(/images/footer-icon-instagram.png)"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+{% endblock %}
+{% block social %}
 {% endblock %}
