--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,8 +87,8 @@
                 <div class="social pt-2 {% if app.request.get('_route') != 'home' %}back-transparent{% endif %}">
                     <div class="container pt-4 pb-5">
                         <div class="row">
-                            <div class="col text-center mb-3">
-                                <div class="section-title">NOUS SUIVRE</div>
+                            <div class="col text-center">
+                                <div class="section-subtitle">NOUS SUIVRE</div>
                             </div>
                         </div>
                         <div class="row justify-content-center">
