--- a/templates/practical_info/index.html.twig
+++ b/templates/practical_info/index.html.twig
@@ -50,8 +50,8 @@
                 <div class="social pt-2 background-transparent">
                     <div class="container pt-4">
                         <div class="row">
-                            <div class="col text-center mb-3">
-                                <div class="section-title">NOUS SUIVRE</div>
+                            <div class="col text-center mt-5">
+                                <div class="section-subtitle">NOUS SUIVRE</div>
                             </div>
                         </div>
                         <div class="row justify-content-center">
