--- a/templates/ticket_pay/index.html.twig
+++ b/templates/ticket_pay/index.html.twig
@@ -17,15 +17,24 @@
                 <div class="col-10 ticket-form">
                     <div class="col-7 offset-2">
                         <div class="pl-1 d-flex flex-column">
-                            <div class="mb-2 ticket-reserve">Réserver votre billet</div>
+                            <div class="mb-1 ticket-reserve">Réserver votre billet</div>
                             <div class="mb-3 font-weight-light">Entrez vos informations bancaires.</div>
-                            <div>Moyen de paiement :</div>
-                            <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
-                            <div>Numéro de carte</div>
+                            <div class="font-weight-bold">Moyen de paiement :</div>
+                            <div class="mt-2 mb-3">
+                                <img src="{{ asset('images/cb.png') }}" alt="">
+                            </div>
+                            <div class="font-weight-bold">Numéro de carte</div>
                             <div class="d-flex"><input placeholder="XXXX XXXX XXXX XXXX" class="w-50" type="text"></div>
-                            <div>Date d'expiration</div>
-                            <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
-                            <div>Cryptogramme visuel</div>
+                            <div class="font-weight-bold">Date d'expiration</div>
+                            <div class="d-flex">
+                                <div class="position-relative">
+                                    <input placeholder="Mois" class="halfsize-input mr-3" type="text"><div class="base-arrow-wrapper"><i class="base-arrow down"></i></div>
+                                </div>
+                                <div class="position-relative">
+                                <input placeholder="Année" class="halfsize-input" type="text"><div class="base-arrow-wrapper"><i class="base-arrow down"></i></div>
+                                </div>
+                            </div>
+                            <div class="font-weight-bold">Cryptogramme visuel</div>
                             <div class="d-flex"><input placeholder="xxx" class="w-50" type="text"></div>
                             <div class="text-left mt-3"><button class="primary-button ticket-button"><a href="{{ path('ticket_confirmation') }}">Payer et réserver</a></button></div>
                         </div>
@@ -33,5 +42,24 @@
                 </div>
             </div>
         </div>
+        <div class="social pt-2 background-transparent">
+            <div class="container pt-4">
+                <div class="row">
+                    <div class="col text-center mt-5">
+                        <div class="section-subtitle">NOUS SUIVRE</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto text-center">
+                        <div class="social-image" style="background-image: url(/images/footer-icon-facebook.png)"></div>
+                    </div>
+                    <div class="col-auto text-center">
+                        <div class="social-image" style="background-image: url(/images/footer-icon-instagram.png)"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+{% endblock %}
+{% block social %}
 {% endblock %}
